last touch on the documentation

--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -1,6 +1,6 @@
-//* xref:mapping-priorities.adoc[Mapping priorities]
 * xref:repository-structure.adoc[Repository structure]
 * xref:mapping-suite-structure.adoc[Mapping suite anatomy]
 * xref:methodology.adoc[Methodology]
 * xref:cli-toolchain.adoc[Toolchain]
 * xref:preparing-test-data.adoc[Data samples]
+* xref:mapping-priorities.adoc[Mapping priorities]
