--- a/docs/antora/modules/ROOT/pages/mapping-priorities.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-priorities.adoc
@@ -1,3 +1,59 @@
 [#_mapping-priorities]
-# Mapping priorities
+= Mapping priorities
+
+The mapping order has been established by the Publications Office based on internally estimated priorities. First the Standard Forms will be mapped followed by the eForms. The *Priority* column contains ordering codification fomed of a prefix and a number. The `TX` prefix is used for standard forms and `EF` for eForms. The number indicates the order of priority, where smaller number means higher priority.
+
+The table also shows distribution of different notice types across important directives and regulations.
+
+## Standard forms mapping order
+
+|===
+|Notice Type|Priority|Directive 24|Directive23|Directive 25|Directive 81|Reg 1370
+
+|pin-buyer|TX-4|F8|F8|F8|na|
+|pin-only|TX-4|F1|na|F4|F16|
+|pin-rtl|TX-4|F1|na|F4|na|
+|pin-cfc-standard|TX-2|F1|na|F4|na|
+|pin-cfc-social|TX-2|F21|F23|F22|na|
+|qu-sy|TX-2|na|na|F7&F22(social)|na|
+|cn-standard|TX-2|F2|F24|F5|F17|
+|cn-social|TX-2|F21||F22|na|
+|subco||na|na|na|F19|
+|cn-desg|TX-2|F12||F12|na|
+|veat|TX-3|F15|F15|F15|na|
+|can-standard|TX-1|F3|F25|F6|F18|
+|can-social|TX-1|F21|F23|F22|na|
+|can-desg|TX-1|F13|na|F13|na|
+|can-modif|TX-1|F20|F20|F20|na|
+|corr|TX-1b|F14|F14|F14|na|
+|pin-tran|TX-5|na|na|na|na|T1
+|can-tran|TX-3b|na|na|na|na|T2
+|===
+
+## eForms mapping order
+
+|===
+|Notice Type|Priority|Directive 24|Directive23|Directive 25|Directive 81|Other/Any|Reg 1370
+
+|pin-buyer|EF-4|✓|na|✓|✓|na|
+|pin-only|EF-4|✓|na|✓|✓|✓|
+|pin-rtl|EF-4|✓|na|✓|✓|na|
+|pin-cfc-standard|EF-1|✓|na|✓|na|na|
+|pin-cfc-social|EF-1|✓|✓|✓|na|na|
+|qu-sy|EF-1|na|na|✓|na|na|
+|cn-standard|EF-1|✓|✓|✓|✓|✓|
+|cn-social|EF-1|✓|na|✓|na|na|
+|subco|EF-1|na|na|na|✓|na|
+|cn-desg|EF-1|✓|na|✓|na|na|
+|veat|EF-3|✓|✓|✓|✓|na|
+|can-standard|EF-2|✓|✓|✓|✓|✓|
+|can-social|EF-2|✓|✓|✓|na|na|
+|can-desg|EF-2|✓|na|✓|na|na|
+|can-modif|EF-2|✓|✓|✓|na|na|
+|corr|EF-2b|✓|✓|✓|✓|✓|
+|pin-tran|EF-5|na|na|na|na|na|✓
+|can-tran|EF-3b|na|na|na|na|na|✓
+|PMC|EF-7|✓|✓|✓|✓|✓|
+|Completion Notice|EF-6|✓|✓|✓|✓|✓|
+|===
 
