--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -11,7 +11,7 @@ This data sample contains carefully selected TED notices based on the following 
 
 
 === Sampling result statistics
-Below we present two tables with statistics indicating the total number for each slection criteria, the percentage relative to teh total number of considererd notices (i.e. total in 2021), and the number of selected most representative notices.
+Below we present two tables with statistics indicating the total number for each selection criteria, the percentage relative to teh total number of considered notices (i.e. total in 2021), and the number of selected most representative notices.
 
 ==== Sampling based on form_number:
 
@@ -47,7 +47,7 @@ Below we present two tables with statistics indicating the total number for each
 
 
 |===
-|*eforms_subtype*|*nr. notices*|*procent ration from total number*|*most representative notices*
+|*eforms_subtype*|*nr. notices*|*percentage of notices*|*most representative notices*
 
 |29|249618|37,35|19
 |16|223430|33,43|19
