--- a/docs/antora/modules/ROOT/pages/repository-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/repository-structure.adoc
@@ -1,4 +1,4 @@
-# Repository structure
+= Repository structure
 
 Transformation rules and other artefacts for the https://github.com/meaningfy-ws/ted-sws[TED Semantic Web Services (TED-SWS)] system are organised in https://github.com/meaningfy-ws/ted-sws-artefacts[this repository].
 
