--- a/docs/antora/modules/ROOT/partials/methodology/conceptual-mapping-structure.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/conceptual-mapping-structure.adoc
@@ -52,7 +52,7 @@ https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQ
 |https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=C3:C[C3:C]|eForm BT-ID (O)|The ID of the corresponding business term (BT) or business term group (BG) in eForms. The values are coming from the column B of this spreadsheet (or one of its equivalents): |Optional
 |https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=D3:D[D3:D]|eForm BT Name (O)|The name of the corresponding business term (BT) or business term group (BG) in eForms. The values are coming from the column C of this spreadsheet (or one of its equivalents): |Optional
 |*E:F*|*Standard form technical mapping*||
-|https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=E3:E[E3:E]|Base XPath (for anchoring) (M)|The “base” XPath that identifies an XML element and all of its subelements. It can be specified at the level of a section, or subsection, so that writing XPaths for form elements within that (sub)section will not have to repeat over and over again the “base” XPath.|Mandatory
+|https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=E3:E[E3:E]|Base XPath (for anchoring) (M)|The “base” XPath that identifies an XML element and all of its sub-elements. It can be specified at the level of a section, or subsection, so that writing XPaths for form elements within that (sub)section will not have to repeat over and over again the “base” XPath.|Mandatory
 |https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=F3:F[F3:F]|Field XPath (M)|The XPath that identifies the form element, which is relative to the “base” XPath that was specified for the closest  element above this one.|Mandatory
 |*G:J*|*ePO mapping*||
 |https://docs.google.com/spreadsheets/d/1iSk02YD7lfPByKnBDU4Z2XiBjY6zCqMP79uyydiQxxU/edit#gid=435265674&range=G3:G[G3:G]|Class path (M)|Specifies the types of the resources involved in the entire “path” from the subject to the object, which “connects” the concept that represents this XML element (the object), to an RDF resource already created from previous XML elements (the subject). So, if the representation of an XML element involves the creation of the following triples:
