--- a/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
@@ -1,4 +1,4 @@
-[#technical-mapping-modularisation-chapter]
+[#_technical-mapping-modularisation-chapter]
 === Create RML Rules Modules
 Forms tend to have similar or identical sections i.e. represent the same information. For example form F03 and F06 have the same section 1 which is the information about the contract authority.
 
@@ -9,7 +9,7 @@ In order to not write transformation rules twice (for section 1 of F03 and secti
 * In the case of an update of the ePO ontology, we will have to implement the modification only once within the modules concerned by modification which will be passed into all the forms.
 
 
-As explained in xref:partial$methodology/mapping-creation-method.adoc[technical mappings creation], a TripleMap represent a mapping of an XML element and its content with one class in the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in this modules files the predicates objects of a TripleMap. , the logical sources and subjects map are described seperately in the main file as they contain specific information of forms.  For example a module that contain an organisation looked like that:
+As explained in xref:partial$methodology/mapping-creation-method.adoc[technical mapping creation section], a TripleMap represent a mapping of an XML element and its content with one class in the ontology and a set of its predicates objects. In order to have a module that can be reused on many forms we only define in these module files the predicates objects of a TripleMap. The logical sources and subjects map, needed in every TripleMap object, are described separately in the main file as they contain information specific to every form, making these parts of the TripleMap object non-reusable. For example a module that contain an organisation looked like that:
 
 ----
 <#OrganisationMapping> a rr:TriplesMap ;
