--- a/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
+++ b/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
@@ -8,7 +8,7 @@ After the installation, the following CLIs will be available (the name of the to
 
 === SPARQL Test Generator (sparql_generator)
 
-This CLI generates a set of SPARQL queries from the conceptual mapping that will be executed by the sparql_runner CLI (see next CLI). Each generated query will be used to test if the related conceptual mapping is correctly generating RDF data or not.
+This CLI generates a set of SPARQL queries from the conceptual mapping that will be executed by the `sparql_runner` CLI (described in the next section). Each generated query will be used to test if the related conceptual mapping is correctly generating RDF data or not.
 
 For more detailed documentation on its usage please check out the https://github.com/meaningfy-ws/ted-sws#cmd-sparql_generator[readme file].
 
@@ -33,7 +33,7 @@ Consult the authority tables used in the EPO available from the https://op.europ
 For more detailed documentation on its usage please check out the https://github.com/meaningfy-ws/ted-sws#cmd-[readme file].
 
 === RML Modules Injector (rml_modules_injector)
-This CLI injects the technical mappings modules from the src folder (see xref:technical-mapping-modularisation.adoc[modules chapter]) into the MappingSuite. Each Form has a module list that is needed in order to run the mapping_runner.
+This CLI injects the technical mappings modules from the src folder (see xref:methodology.adoc#_technical-mapping-modularisation-chapter[modules chapter]) into the MappingSuite. Each Form has a module list that is needed in order to run the mapping_runner.
 The modules name are listed on the "RML_Modules" spreadsheet of the Conceptual Mappings
 
 For more detailed documentation on its usage please check out the https://github.com/meaningfy-ws/ted-sws#cmd-[readme file].
@@ -67,7 +67,7 @@ Other relevant tools that are used in the mapping process that worth mentioning,
 
 https://rml.io/yarrrml/matey/#[Matey]: a browser-based application that helps writing YARRRML rules, and converting them to RML rules that can be also executed online. Matey uses the yarrrml-parser (described next) in the backend
 
-The https://github.com/rmlio/yarrrml-parser[RMLio/yarrrml-parser] library, available on Github, allows the conversion of YARRRML rules to RML or R2RML rules.  Since this is a library, besides using it to power Matey, it can be also used independently or as an integrated part of our CLI tools.
+The https://github.com/rmlio/yarrrml-parser[RMLio/yarrrml-parser] library, available on GitHub, allows the conversion of YARRRML rules to RML or R2RML rules.  Since this is a library, besides using it to power Matey, it can be also used independently or as an integrated part of our CLI tools.
 
 The https://github.com/RMLio/rmlmapper-java[RMLio/rmlmapper-java] library, available on GitHub, allows the execution of a set of RML mappings on a set of data sources, to generate high quality RDF data.
 
