last touch on the documentation

--- a/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
+++ b/docs/antora/modules/ROOT/pages/cli-toolchain.adoc
@@ -1,4 +1,4 @@
-== Toolchain used in the mapping development process
+= Toolchain used in the mapping development process
 
 The mapping artefacts, including the various mapping suite packages that are being developed by the process described in this document, are stored and maintained in the https://github.com/meaningfy-ws/ted-sws-artefacts[meaningfy-ws/ted-sws-artefacts] GitHub repository.
 
