--- a/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/mapping-suite-structure.adoc
@@ -1,4 +1,4 @@
-== Mapping suite package structure
+= Mapping suite package structure
 
 In this section we describe the structure of a “mapping suite package” in GitHub. Such a package contains everything that is needed for the development and testing of a given “mapping suite” that is applicable to a certain set of notices. After the package is finalised, it can be used by a process to apply it to a large number of notices stored in a database, and would transform those notices into RDF data.
 
