--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -1,7 +1,10 @@
-== Representative sample data selection
+= Representative sample data selection
+
+This section describes TED notice data samples and methods used to generate them. At first a sampling is performed on the notices from 2021, and then on a wider set.
 
 == Sample TED notices from 2021
-This data sample contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cove all possible XPath configurations available in the data.
+
+This data sample (`test_data/sampling_2021`) contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cove all possible XPath configurations available in the data. The sampling was performed automatically using a custom algorithm available in the https://github.com/meaningfy-ws/ted-sws[TED-SWS repository].
 
 * The current sampling exercise was performed on all records collected in 2021;
 
