--- a/docs/antora/modules/ROOT/pages/repository-structure.adoc
+++ b/docs/antora/modules/ROOT/pages/repository-structure.adoc
@@ -26,8 +26,8 @@ requirements.txt
 
 `/mappings` folder contains xref:mapping-suite-structure.adoc[mapping suite packages] organised based on the standard forms numbers. Their name is formed based on the form number (e.g. F03, F06) prefixed with `package` for readability. When the eForms will be mapped, then the corresponding appropriate organisation will be chosen.
 
-`/src/mappings` folder represents the single source of truth for the mapping rules across various mapping suite packages. This is necessary because of the xref:partial$methodology/technical-mapping-modularisation.adoc[modularisation and reuse method] adopted in this project. The basic idea is that the mapping rules are organised in modules and all stored in the source folder. Each mapping suite provides in the xref:partial$methodology/conceptual-mapping-structure.adoc[conceptual mapping workbook] the list of modules that be used to compose the complete set of transformation rules of the mapped form number.
+`/src/mappings` folder represents the "single source of truth" for the mapping rules across various mapping suite packages. This is necessary because of the xref:methodology.adoc#_technical-mapping-modularisation[modularisation and reuse method] adopted in this project. The basic idea is that the mapping rules are organised in modules and all stored in the source folder. Each mapping suite provides in the xref:methodology.adoc#_conceptual-mapping-structure[conceptual mapping workbook] the list of modules that be used to compose the complete set of transformation rules of the mapped form number.
 
-`/test_data` folder contains sample https://ted.europa.eu/TED/browse/browseByMap.do[TED notices] originating by different selection methods. Some manually selected data are available in the `/sampling_manual` and automatically generated notices in `/sampling_2021` described xref:preparing-test-data.adoc[here]. More automated samples will follow.
+`/test_data` folder contains sample https://ted.europa.eu/TED/browse/browseByMap.do[TED notices] originating by different selection methods. Some manually selected notices are available in the `/sampling_manual` subfolder. The automatically generated notice samples, which are in the `/sampling_2021` subfolder, are described xref:preparing-test-data.adoc[here]. More automatically generated samples will follow.
 
 
