--- a/docs/antora/modules/ROOT/partials/methodology/conceptual-mapping-structure.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/conceptual-mapping-structure.adoc
@@ -7,7 +7,7 @@ In this section we describe the structure of the mapping file that we aim to cre
 It consists of several important worksheets:
 
 * Metadata sheet: provides important technical and descriptive information about the mapping suite
-* Resources Sheet: provides the list of resources used in the technical mappings. This list is used to automatically populate the mapping suite with indicated resources files.
+* Resources sheet: provides the list of resources used in the technical mappings. This list is used to automatically populate the mapping suite with indicated resources files.
 * Rules sheet: provides the actual set of mapping rules
 * Misc: there are additional optional worksheets added by the semantic engineers to manage additional information.
 
