--- a/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/key-elements-for-mapping.adoc
@@ -2,12 +2,12 @@
 ==  Key elements involved in the mapping process
 In this section we will provide descriptions and references to the key elements (concepts or resources) that are involved in the creation of mappings or the mapping process itself.
 
-Based on the documents described in the previous subsections (i.e. the mapping input, the output of the mapping, and the additional resources) the purpose of the mapping process is to generate a “mapping table” (contained in the xref:partial$methodology/conceptual-mapping-structure.adoc[conceptual mapping artefact]) that can be processed by an automated workflow of the https://github.com/meaningfy-ws/ted-sws[TED-SWS system] to “execute” these mappings in order to convert the TED XML input data into an ePO conformant RDF graph (the output of the mapping). This “mapping table” will be encoded as a spreadsheet, with multiple worksheets, whose structure is described elsewhere.
+The purpose of the mapping process is to generate a “mapping table” (described in the xref:methodology.adoc#_conceptual-mapping-structure[conceptual mapping artefact] section) that can be processed by an automated workflow of the https://github.com/meaningfy-ws/ted-sws[TED-SWS system] to “execute” these mappings in order to convert the TED XML input data into an ePO conformant RDF graph (the output of the mapping). This “mapping table” will be encoded as a spreadsheet, with multiple worksheets, whose structure is described elsewhere.
 
 
 === Notices to be mapped
 
-The input for the transformation process is *are XML files* that contain TED notice data. These data are structured according to the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[“Standard Forms”]  published by the European Commission. There are 23 standard forms defined (numbered 1-8, 12-25, T1 and T2), whose PDF versions can be found here: https://simap.ted.europa.eu/standard-forms-for-public-procurement[https://simap.ted.europa.eu/standard-forms-for-public-procurement].
+The input for the transformation process are *XML files* that contain TED notice data. These data are structured according to the https://simap.ted.europa.eu/web/simap/standard-forms-for-public-procurement[“Standard Forms”]  published by the European Commission. There are 23 standard forms defined (numbered 1-8, 12-25, T1 and T2), whose PDF versions can be found here: https://simap.ted.europa.eu/standard-forms-for-public-procurement[https://simap.ted.europa.eu/standard-forms-for-public-procurement].
 
 The XML files need to conform to the official TED XML format defined by https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[TED XML Schema] (XSD). Over the years, multiple versions of this TED XML Schema were released, and there is a significant amount of XML data published that conform to these various versions. The latest XML notices are conformant to the https://op.europa.eu/en/web/eu-vocabularies/e-procurement/tedschemas[*versions R2.0.8 (more precisely R2.0.8.S05.E01_002-20201027 - in case of forms 16-19) and R2.0.9 (more precisely R2.0.9.S05 - for all the other forms)]* of the TED XML Schema.
 
