--- a/docs/antora/modules/ROOT/partials/methodology/mapping-lifecycle.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/mapping-lifecycle.adoc
@@ -15,14 +15,14 @@ The process starts by **deciding which notice type to map**. The notice classifi
 
 Once the target form is selected, **a set of representative shall be selected** in order to serve as a test set for the developed mapping.
 
-The notice classification scheme is usually subject to regulations and described in multiple forms starting from PDF documents, XSD schemes, and other documents. All possible documentation and modelling artefacts are **analysed in order to produce a conceptual mapping** (see <<_conceptual-mapping-structure,conceptual mapping structure>> ). This artefact, stored as a workbook, establishes the correspondence of the TED notice fields, to XPath expressions and to EPO structures.
+The notice classification scheme is usually subject to regulations and described in multiple forms starting from PDF documents, XSD schemes, and other documents. All possible documentation and modelling artefacts are **analysed in order to produce a conceptual mapping** (described in the <<_conceptual-mapping-structure,Conceptual mapping structure>> section). This artefact, stored as a workbook, establishes the correspondence of the TED notice fields, to XPath expressions, and to EPO structures.
 
 Once the conceptual mapping is established between the XPath expressions and ontology structures, **a corresponding technical mapping is implemented**. This technical mapping consists of a set of mapping rules expressed in https://rml.io/specs/rml/[RDF Mapping Language (RML)] and it represents a translation of the conceptual mapping into a formal language which can be automatically executed by a transformation engine, such as https://github.com/RMLio/rmlmapper-java[RMLMapper].
 
 Reading RML, for revision or debugging purposes, can be difficult. To ease this process, the *RML files can be turned into a comprehensive HTML report*. This human friendly form can serve, for example, parsing the set of conceptual mapping rules and the technical ones, in order to *check their completeness or consistency*.
 
-That completeness check is a manual step but not the only quality assurance mechanism foreseen in the lifecycle process. Grace to the setup and conventions of the conceptual mapping file, it permits generation of several additional artefacts (described elsewhere). In particular, *a set of SPARQL assertion queries can be generated*. These queries can be used to assess whether the fields mapped in the conceptual mapping are found in that form in the RDF file generated from an XMl notice.
+That completeness check is a manual step but not the only quality assurance mechanism foreseen in the lifecycle process. The setup and conventions of the conceptual mapping file  permits generation of several additional artefacts (described elsewhere). In particular, *a set of SPARQL assertion queries can be generated*. These queries can be used to assess whether or not the fields mapped in the conceptual mapping are found in that form in the RDF file generated from an XML notice.
 
-To put the SPARQL assertions into practice, the sample data, initially selected *sample data is automatically transformed into RDF*, using the RML mapping rules. And on each output, the *SPARQL queries are applied* resulting in a report, which indicates which query yielded a positive and which a negative result. The resulting validation reports can be checked to detect mistakes in the RML transformation rules or teh conceptual mapping.
+To put the SPARQL assertions into practice, the sample data, initially selected *sample data is automatically transformed into RDF*, using the RML mapping rules. And on each output, the *SPARQL queries are applied* resulting in a report, which indicates which query yielded a positive and which a negative result. The resulting validation reports can be checked to detect mistakes in the RML transformation rules or the conceptual mapping.
 
 The final step consists of another assessment of the generated data: the *fingerprinting*. This procedure generates a report which *reconstructs the data shape instantiated in a particular notice*. This permits identification of mistakes with regard to the EPO ontology.
