--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -4,7 +4,7 @@ This section describes TED notice data samples and methods used to generate them
 
 == Sample TED notices from 2021
 
-This data sample (`test_data/sampling_2021`) contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cove all possible XPath configurations available in the data. The sampling was performed automatically using a custom algorithm available in the https://github.com/meaningfy-ws/ted-sws[TED-SWS repository].
+This data sample (`test_data/sampling_2021`) contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cover all possible XPath configurations available in the data. The sampling was performed automatically using a custom algorithm available in the https://github.com/meaningfy-ws/ted-sws[TED-SWS repository].
 
 * The current sampling exercise was performed on all records collected in 2021;
 
