Fixing issue #99, Jira ticket TED-706.

--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -4,3 +4,4 @@
 * xref:cli-toolchain.adoc[Toolchain]
 * xref:preparing-test-data.adoc[Data samples]
 * xref:mapping-priorities.adoc[Mapping priorities]
+* xref:code-list-resources.adoc[Code list mappings]
