--- a/docs/antora/modules/ROOT/pages/index.adoc
+++ b/docs/antora/modules/ROOT/pages/index.adoc
@@ -6,3 +6,4 @@ Also, xref:preparing-test-data.adoc[carefully selected sample data] are availabl
 
 We foresee to map all standard forms and then eForms according to xref:mapping-priorities.adoc[this plan, prioritising some form number over other ones]. In order to be consistent in our approach, we also have established the mapping xref:methodology.adoc[methodology].
 
+The scription of the code list mappings are provided xref:code-list-resources.adoc[here].
