--- a/docs/antora/modules/ROOT/pages/code-list-resources.adoc
+++ b/docs/antora/modules/ROOT/pages/code-list-resources.adoc
@@ -1,28 +1,32 @@
 === Code List Resources for Mappings
 
-*JSON* and *CSV* format files can be found at the following location https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/resources[https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/resources] +
-The *specific URIs* are directly used in the https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/mappings[technical mappings] and can also be found in the https://github.com/OP-TED/ted-rdf-mapping/blob/main/mappings/package_F03/transformation/conceptual_mappings.xlsx[conceptual mapping file].
+The table below provides a list of resources that are used to map the various code lists used in the XML files to URIs in the RDF representation.
 
-*Please ensure you change the path of the link to the tag you are checking.* +
-For example, for tx1.1-delta tag, the links will be:
+The *JSON* and *CSV* format files can be found at the following location:
+https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/resources[https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/resources] +
+The *specific URIs* are directly used in the
+https://github.com/OP-TED/ted-rdf-mapping/tree/main/mappings/package_F03/transformation/mappings[technical mapping files], and they can also be found in the
+https://github.com/OP-TED/ted-rdf-mapping/blob/main/mappings/package_F03/transformation/conceptual_mappings.xlsx[conceptual mapping file].
+
+*Imortant note:* Please ensure you change the path of the link to the tag that you are checking. For example, for the `tx1.1.delta` tag, the links mentioned above will be:
 
 * https://github.com/OP-TED/ted-rdf-mapping/tree/tx1.1.delta/mappings/package_F03/transformation/resources[https://github.com/OP-TED/ted-rdf-mapping/tree/tx1.1.delta/mappings/package_F03/transformation/resources]
 * https://github.com/OP-TED/ted-rdf-mapping/blob/tx1.1.delta/mappings/package_F03/transformation/conceptual_mappings.xlsx[https://github.com/OP-TED/ted-rdf-mapping/blob/tx1.1.delta/mappings/package_F03/transformation/conceptual_mappings.xlsx]
 * https://github.com/OP-TED/ted-rdf-mapping/tree/tx1.1.delta/mappings/package_F03/transformation/resources[https://github.com/OP-TED/ted-rdf-mapping/tree/tx1.1.delta/mappings/package_F03/transformation/resources]
 
 |===
-|*Resource*|*Usage*|*Reasoning*
+|*Code List Resource*|*Resource Type*|*Reasoning*
 
-|at-voc:country|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:nuts|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:currency|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:cpv|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:contract-nature|json format|Used a SPARQL query to get the values from the specific EU Voc
-|award_criterion_type.json|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:legal-basis|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:cpvsuppl|json format|Used a SPARQL query to get the values from the specific EU Voc
-|at-voc:main-activity|csv format|Used this format because the XML element from XSD schema is different than the code from the specific EU Voc
-|at-voc:buyer-legal-type|csv format|Used this format because the XML element from XSD schema is different than the code from the specific EU Voc
+|at-voc:country|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:nuts|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:currency|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:cpv|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:contract-nature|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|award_criterion_type.json|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:legal-basis|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:cpvsuppl|JSON format|Used a SPARQL query to get the values from the specific EU Voc
+|at-voc:main-activity|CSV format|Used this format because the XML element from XSD schema is different than the code from the specific EU Voc
+|at-voc:buyer-legal-type|CSV format|Used this format because the XML element from XSD schema is different than the code from the specific EU Voc
 |at-voc:award-criterion-type|URI|Used only when we want to map to a specific value from the EU voc
 |at-voc:procurement-procedure-type|URI|Used only when we want to map to a specific value from the EU voc
 |at-voc:winner-selection-status|URI|Used only when we want to map to a specific value from the EU voc
