--- a/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
+++ b/docs/antora/modules/ROOT/partials/methodology/technical-mapping-modularisation.adoc
@@ -45,7 +45,7 @@ This module is extended in the main file of F03 by adding the logicalSource and 
 		] ;
 ----
 
-The modules are stored in the rdf-mapping project in the `src/mappings` folder.
+The modules are stored in the ted-rdf-mapping project in the `src/mappings` folder.
 For the moment we covered five modules that represent the five sections of F03 and part of F06/F25, and one for Annex D1, which is part of F03. The modules are:
 
 * s1_contracting_authority.rml.ttl
