--- a/docs/antora/modules/ROOT/pages/methodology.adoc
+++ b/docs/antora/modules/ROOT/pages/methodology.adoc
@@ -1,4 +1,4 @@
-= Methodology
+= Mapping Methodology
 
 The purpose of this guide is to describe a *methodology for creating mapping rules* that can be used for transforming XML data representing the content of the TED “Standard” Forms into RDF graphs that conform to the https://github.com/OP-TED/ePO[ePO ontology].
 
