--- a/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
+++ b/docs/antora/modules/ROOT/pages/preparing-test-data.adoc
@@ -4,22 +4,22 @@ This section describes TED notice data samples and methods used to generate them
 
 == Sample TED notices from 2021
 
-This data sample (`test_data/sampling_2021`) contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cover all possible XPath configurations available in the data. The sampling was performed automatically using a custom algorithm available in the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-SWS repository].
+This data sample (`test_data/sampling_2021`) contains carefully selected TED notices based on the following criteria: maximise representativeness, minimise the number of selected documents. The selected notices are guaranteed to cover all possible XPath configurations available in the data. The sampling was performed automatically using a custom algorithm available in the https://github.com/OP-TED/ted-rdf-conversion-pipeline[TED-RDF Conversion Pipeline] repository.
 
 * The current sampling exercise was performed on all records collected in 2021;
 
-* The data space was partitioned twice based on two criteria: the notice form number (e.g. F03, F06) and the eForms Subtype (e.g. cn-standard, can-utilities);
+* The data space was partitioned twice based on two criteria: the notice form number (e.g. `F03`, `F06`) and the eForms Subtype (e.g. `cn-standard`, `can-utilities`);
 
 * The minimal set of the most representative notices have been selected for each form_number and eforms_subtype .
 
 
 === Sampling result statistics
-Below we present two tables with statistics indicating the total number for each selection criteria, the percentage relative to teh total number of considered notices (i.e. total in 2021), and the number of selected most representative notices.
+Below we present two tables with statistics indicating the total number for each selection criteria, the percentage relative to the total number of considered notices (i.e. total in 2021), and the number of selected most representative notices.
 
 ==== Sampling based on form_number:
 
 |===
-|*form_number*|*nr. notices*|*percent ration from total number*|*nr. of the most representative notices*
+|*form_number*|*nr. of notices*|*percentage of total number of notices*|*nr. of the most representative notices*
 
 |F03|249618|37,35|20
 |F02|223430|33,43|18
@@ -43,14 +43,14 @@ Below we present two tables with statistics indicating the total number for each
 |F23|0|0|0
 |F07|0|0|0
 |F19|0|0|0
-|*Total*|*668381*||*365*
+|*Total*|*668381*|*100%*|*365*
 |===
 
 ==== Sampling based on eforms_subtype:
 
 
 |===
-|*eforms_subtype*|*nr. notices*|*percentage of notices*|*most representative notices*
+|*eforms_subtype*|*nr. of notices*|*percentage of total number of notices*|*nr. of most representative notices*
 
 |29|249618|37,35|19
 |16|223430|33,43|19
@@ -91,6 +91,6 @@ Below we present two tables with statistics indicating the total number for each
 |33|0|0|0
 |34|0|0|0
 |35|0|0|0
-|*Total*|*668381*||*454*
+|*Total*|*668381*|*100%*|*454*
 |===
 
