added versioning structure

--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -5,3 +5,4 @@
 * xref:cli-toolchain.adoc[Toolchain]
 * xref:preparing-test-data.adoc[Data samples]
 * xref:mapping-priorities.adoc[Mapping priorities]
+* xref:versioning.adoc[Versioning]
